# JeffTools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pypi-build-test-publish.yml  pypi-build-test.yml
notebooks/: Example.ipynb  animation.html
src/RomanTools/: __init__.py  _version.py
src/RomanTools/data/: F184_us220240305_bandpasses.txt  skinny_us220240305_bandpasses.txt
src/RomanTools/data/throughput/: F184_mask_throughput.txt  Grism_mask_throughput.txt  Prism_mask_throughput.txt  Skinny_mask_throughput.txt
src/RomanTools/telescope/: __init__.py  roman_grism_telescope.py  roman_image_telescope.py  roman_input_parameters.py  roman_optics.py  roman_prism_telescope.py  roman_telescope.py  sca_dependent_data.py  tel_elem_table.py  telescope.py
src/RomanTools/telescope/instrument/: __init__.py  instrument.py  mode.py  zone_elements.py
src/RomanTools/telescope/instrument/filter/: __init__.py  filter_dep.py  grism_filter.py  image_filter.py  prism_filter.py
src/RomanTools/telescope/psf/: __init__.py  r_other.py
src/RomanTools/telescope/roman/: __init__.py  pupil_obscuration_geometry.py  roman_grism_telescope.py  roman_image_telescope.py  roman_input_parameters.py  roman_optics.py  roman_prism_telescope.py  roman_telescope.py  sca_dependent_data.py
