[metadata]
name = RomanTools
description = A Simulator for Roman Instrument Response
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexander Reustle
author_email = alexander.reustle@nasa.gov
license = BSD-3-Clause
license_files =
    LICENSE
    LICENSE.txt
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    NASA
    Simulation

[options]
packages = find:
install_requires =
    astropy>=4.3
    numpy>=1.21
    pydantic>=3.8
    importlib-resources;python_version<"3.9"
python_requires = >=3.9
ext_package = RomanTools
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.package_data]
RomanTools.data =
    F184_us220240305_bandpasses.txt
    skinny_us220240305_bandpasses.txt
RomanTools.data.throughput =
    F184_mask_throughput.txt
    Skinny_mask_throughput.txt
    Grism_mask_throughput.txt
    Prism_mask_throughput.txt

[bdist_wheel]
universal = True

[tox:tox]
envlist =
    py{39,310,311,312}
    docs
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}

[testenv:docs]
description = invoke sphinx-build to build HTML docs
basepython = python3.10
deps =
    sphinx
    sphinx-panels
    sphinx-rtd-theme
    sphinx-click
commands = python -m sphinx -v -T -E -W --keep-going -bhtml -d "{toxworkdir}/docs_doctree" docs "{toxworkdir}/docs_out" --color {posargs}
    python -c 'import pathlib; print("documentation available under file://\{0\}".format(pathlib.Path(r"{toxworkdir}") / "docs_out" / "index.html"))'
